--- a/snake-react/src/index.scss
+++ b/snake-react/src/index.scss
@@ -1,5 +1,5 @@
-@import "./styles/variables";
-@import "./styles/reset";
+@import './styles/variables';
+@import './styles/reset';
 
 html,
 body,
@@ -11,6 +11,5 @@ body,
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  background: $app-dark-background;
   overflow: hidden;
 }
